<resources>
    <string name="app_name">XMood</string>
    <string name="title_mood">心情</string>
    <string name="title_daily">日程</string>
    <string name="title_memorandum">备忘录</string>
    <string name="title_schedule">课程表</string>
    <string name="title_me">我</string>
    <string name="title_add_memorandum">新的备忘录</string>
    <string name="title_search_memorandum">查找备忘录</string>
    <string name="title_add_schedule">新的课程</string>
    <string name="title_add_daily">新的日程</string>
    <string name="string_under_nickname">A XMooder~</string>
    <string name="me_menu_theme">主题</string>
    <string name="me_menu_feedback">反馈</string>
    <string name="me_menu_share">分享</string>
    <string name="me_menu_setting">设置</string>
    <string name="me_menu_logout">退出登录</string>
    <string name="me_menu_exit">退出</string>
    <string name="signWelcome">Welcome,</string>
    <string name="signXMooder">XMooder!</string>
    <string name="usernameHint">请输入用户名</string>
    <string name="passwordHint">请输入密码</string>
    <string name="passwordHintSecond">请再次输入密码</string>
    <string name="signin">登录</string>
    <string name="signup">注册</string>
    <string name="set_userpsw">账号信息</string>
    <string name="set_clear_cash">清除缓存</string>
    <string name="set_currency">通用</string>
    <string name="set_privacy">隐私</string>
    <string name="set_about">关于XMood</string>
    <string name="privacy_switch">仅在本机存储数据</string>
    <string name="set_schedule_bg">课程表背景图</string>
    <string name="set_schedule_menu_photo">从相册中选取</string>
    <string name="set_schedule_menu_camera">使用相机拍取</string>
    <string name="cancel">取消</string>
    <string name="today">今日</string>
    <string name="lesson">课程</string>
    <string name="schedule_to_all">显示全部</string>
    <string name="memorandum_all_note">所有笔记</string>
    <string name="memorandum_nav_header">笔记分类</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="thisWeek">本周</string>
    <string name="schedule_to_today">显示当天</string>
    <string name="select_date">学期开始日期</string>

    <string name="count_down">倒计时</string>
</resources>