<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".sign.in.SigninFragment">


    <EditText
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:id="@+id/usernameEdit"
        android:gravity="center"
        android:hint="@string/usernameHint"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/sign_edit_text"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:id="@+id/passwordEdit"
        android:gravity="center"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/usernameEdit"
        android:background="@drawable/sign_edit_text"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:id="@+id/signinInBtn"
        android:text="@string/signin"
        app:layout_constraintCircleRadius="5dp"
        android:textColor="@color/white"
        android:background="@drawable/universal_btn"
        android:layout_marginTop="30dp"
        android:layout_marginRight="35dp"
        app:layout_constraintTop_toBottomOf="@id/passwordEdit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/passwordEdit" />

    <Button
        android:id="@+id/signinUpBtn"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="35dp"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:background="@drawable/universal_btn"
        app:layout_constraintCircleRadius="5dp"
        app:layout_constraintLeft_toLeftOf="@id/passwordEdit"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordEdit" />


</androidx.constraintlayout.widget.ConstraintLayout>